...
                                <color key="backgroundColor" red="0.10980392156862745" green="0.59215686274509804" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="250" id="pjy-vc-kGV"/>
                                    <constraint firstAttribute="height" constant="50" id="x9z-Xc-kxw"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="ESTADO DE SU VEHÍCULO">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="4ba-lD-QpI" kind="show" identifier="requestCarStatus" id="gz7-QL-Vvj"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" red="0.10980392156862745" green="0.59215686274509804" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="pai-aY-zRb"/>
                                    <constraint firstAttribute="width" constant="250" id="xeg-Vs-PCK"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="COTIZACIÓN / PRESUPUESTO">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="gd5-5J-aYp" kind="show" identifier="requestCarBudgeting" id="9ah-kq-Co1"/>
                                </connections>
                            </button>
...
                                    <constraint firstAttribute="height" constant="25" id="HgT-DZ-vbx"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Orden de Trabajo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="z8z-hZ-IzP">
                                <rect key="frame" x="53" y="165" width="270" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="PPP-9a-3fd"/>
                                </constraints>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="4ba-lD-QpI" id="5uq-jl-8Sr"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Dominio" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Zy-CX-p4q">
                                <rect key="frame" x="53" y="235" width="270" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="4ba-lD-QpI" id="Df0-CL-yrp"/>
...
                                <rect key="frame" x="53" y="305" width="270" height="50"/>
                                <color key="backgroundColor" red="0.10980392156862745" green="0.59215686274509804" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="4sh-lT-PXt"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="CONSULTAR ESTADO">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="requestCarStatus:" destination="4ba-lD-QpI" eventType="touchUpInside" id="4ty-zf-7qG"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="48" y="404" width="280" height="50"/>
                                <color key="backgroundColor" red="0.10980392156862745" green="0.59215686274509804" blue="0.22745098039215686" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="bK3-UE-LwT"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                <state key="normal" title="ENVIAR PEDIDO">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="submitCarBudgetingRequest:" destination="gd5-5J-aYp" eventType="touchUpInside" id="FTa-9s-7sU"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email de respuesta" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sd6-t3-hsT">
                                <rect key="frame" x="48" y="354" width="280" height="30"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
...
