...
            }
            if workOrder == "" {
                message += "\nOrden de Trabajo"
            } else if nil == Int(workOrder!) {
                message = "La Orden de Trabajo solo debe contener números."
            }
            showAlert(title: "Faltan datos", message: message)
        } else {
            showLoadingActivity()
            carService?.getCarByBadgeAndWorkOrder(for: badge!.uppercased(), workOrder: workOrderId!){ result in
                switch result {
                case .Success(let car):
                    guard let workOrder = car.workOrder,
...
