...
            } else if !isValidEmail(testStr: email!) {
                message = "El email es incorrecto"
            }
            if !photoUploaded {
                message = "Debe cargar una foto del vehículo a presupuestar"
            }
            showAlert(title:"Datos incorrectos", message: message)
        } else {
            let alertController = UIAlertController(title: "Atención", message:
                "Esta a punto de enviar la foto de su vehículo con su respectiva descripción. Una vez recibidos estos datos se le enviará un mail con la cotizacion a \(email!)", preferredStyle: UIAlertControllerStyle.alert)
            alertController.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default,handler: {(alert: UIAlertAction!) in self.sendValuationRequest(to: email!, messageToSend: messageToSend!)}))
            alertController.addAction(UIAlertAction(title: "Cancelar", style: UIAlertActionStyle.default,handler: nil))
            self.present(alertController, animated: true, completion: nil)
...
